127
-- REG_TEST out logging tcp options for rebuilt packets to match snort bug
-- tweaked S5_TRACE output for consistency
-- disabled new_http_inspect from REG_TEST (accidentally enabled)
-- squelch 129:9 and 129:10 if link addrs are swapped
-- tweaks from Josh
-- tweaked inspector execution

126
-- pulled latest from tom
-- added paramaters to doc reference section
-- flow state updates
-- plug tcp session leak
-- fix paf abort to resume with atom splitter
-- delete bogus code introduced into hi paf
-- ip defrag fixes
-- refactored splitter fallback
-- fix binder.use.service
-- refactored flow state
-- latest from tom and josh 10/22 15:27
-- doc tweaks
-- fixed flow reset ordering of operations
-- changed stream to not generate rebuilt packets when the splitter doesn't
   reassemble packets (ie nhttp internal buffers)
-- added rebuilt buffers count
-- fixed partial flushes
-- fixed use of bytes copied vs actual length
-- patched force flushes to do memcpy
-- patched session clear flushed to be forced
-- fixed up --dump-defaults so that it can be validated unedited
-- fixed normalizer init of flow
-- pulled latest from Tom
-- removed force from session clear
-- updated http_server/inspect defaults
-- updated binder to bind data, session, and gadget
-- http_inspect -> http_global, http_server -> http_inspect,
   nhttp_inspect -> new_http_inspect
-- REG_TEST patches to make -A cmg look more like Snort
-- adding some FIXIT-H-J due to segfaults
-- removed REG_TEST http_server; now http_global/inspect only
-- added missing ip|tcp|udp|icmp options to checksum_drop/eval
-- pulled in latest from Josh
-- pulled in HI defaults patch from Bhagya
-- refactored inspector groups
-- moved normal_mask out of flow into inspector policy
-- patched around flow key issue with icmp ipproto vs pkt type
-- changed builtin rules to rev:1; priority:3;
-- update from Josh to fix codec FPs
-- added REG_TEST support for -N (ignored) and -A console (alert_fast)
-- tweaked alert_fast whitespace